<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/white"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title=" ">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                app:layout_collapseMode="parallax"
                android:padding="10dp"
                >
                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="112dp"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/picture_content_descr"
                    android:src="@drawable/rectangle"
                    android:paddingEnd="16dp"/>

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="112dp"
                    android:contentDescription="@string/picture_content_descr"
                    android:src="@drawable/rectangle"
                    />

            </LinearLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:layout_collapseMode="pin"
                />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:entries="@array/city"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                app:layout_collapseMode="pin"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginLeft="10dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cocktails_chips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:selectionRequired="true"
            app:checkedChip="@id/chip_m"
            >

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_a"
                style="@style/PinkChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coctail_starts_on_a_chip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_b"
                style="@style/PinkChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coctail_starts_on_b_chip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_m"
                style="@style/PinkChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coctail_starts_on_m_chip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_d"
                style="@style/PinkChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coctail_starts_on_d_chip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_else"
                style="@style/PinkChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coctail_starts_on_else_chip" />

        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_food"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_list_menu" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>